﻿v1.3.5

Rez Master
* New: Cleric, Added Defiler's Death's Embrace combet res. (Thanks Arisae!)

Phase Monitor
* Change: The Phase Monitor has been adjusted to allow for tracking of multiple units with the same name.

Encounter Checking
* Change: Phase Monitor linking now occurs when a new Encounter Unit is detected.

Unit Cache
* Change: Reference Lists for missing UTIDs are compiled fresh each run.

Misc
* New: Add command /kbmability : This will list all abilities available to your character along with their Ability ID.

Rift:Storm Legion

Raids
* Endless Eclipse
** Dread Lord Goloch
** Matriarch of Pestilence
** Progenitor
** Kain the Reaper

* Frozen Tempest
** Gangnum
** Gelidra
** Kolmasveli and Toinenveli
** Zaviel
** Crucia

Slivers
* Triumph of the Dragon Queen
** Grand Falconer Zoles
** General Typhiria
** Jultharin
** Cyril

Expert Dungeons
* Archive of Flesh
** Ahzrius
*** New: UTID updated.
*** New: Alert added for Drastic Renovations.
** Animator Cahail
*** New: UTID updated.
** Emphalea
*** New: UTID updated.
** Tzul
*** New: UTID updated.
** Filth Gorger Vorka
*** New: UTID updated.

* Empyrean Core
** Baird Bringhurst
*** New: UTID updated.
** Kaliban's Bodyguards
*** New: UTID updated for both Bodyguards.
** Core Meltdown
*** New: UTID updated for new Units.
*** Change: Unit changed to Irradiated Monster. 
*** Change: Phase Tracking changed to Death Count, this will change again one a new system is tested.
** Doctor Perfidus
*** New: UTID updated.
** Prince Kaliban
*** New: UTID updated.

* Golem Foundry
** Locomotive Bulwark
*** New: UTID updated.
** C1-0N3
*** New: UTID updated for main C1-0N3
*** New: Added 2 addtional UTIDs found for other versions, left 1 open should there be more.
** Subversionary Liaz
*** New: UTID updated.
** Manslaughter
*** New: UTID updated.
** UV-315
*** New: UTID updated.

* Storm Breaker Protocol
** Sandswarm Onslaught
** Baron Slagstorm
** Telaphalon
** Vellion the Pestilent
** Citybreaker Zidae
